--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- Bootstrap Navbar -->
 <nav class="navbar navbar-light bg-faded">
   <div class="container">
-    <a class="navbar-brand" href="#">Mean Docker</a>
+    <a class="navbar-brand" href="#">Mean Docker Boilerplate</a>
   </div>
 </nav>
 
@@ -9,13 +9,17 @@
   <div [style.margin-top.px]="10" class="row">
     <h3>Add new person</h3>
     <form class="form-inline">
-      <div class="form-group">
-        <label for="name">Name</label>
-        <input type="text" class="form-control" id="name" #name>
+      <div class="row">
+        <div class="form-group col-xs-6">
+          <label for="name" class="sr-only"></label>
+          <input id="name" class="form-control input-group-lg" type="text" title="Enter name" placeholder="Name" #name>
+        </div>
       </div>
-      <div class="form-group">
-        <label for="age">Age</label>
-        <input type="number" class="form-control" id="age" #age>
+      <div class="row">
+        <div class="form-group col-xs-6">
+          <label for="age" class="sr-only"></label>
+          <input id="age" class="form-control input-group-lg" type="number" title="Enter age" placeholder="Age" #age>
+        </div>
       </div>
       <button type="button" (click)="addPerson(name.value, age.value)" class="btn btn-primary">Add person</button>
     </form>
